manifestos_giropops_senhas/deployment-giropops-senhas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: giropops-senhas
  name: giropops-senhas-deployment
  namespace: giropops-senhas
spec:
  replicas: 4 # Adicione o número de réplicas desejado
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      imagePullSecrets:
      - name: docker-hub-willber
      containers:
      - image: willbossle/giropops-senhas:2.0
        name: giropops-senhas
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: '0.5'
            memory: 384Mi
          requests:
            cpu: '0.1'
            memory: 128Mi
        imagePullPolicy: IfNotPresent
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            add: ["SYS_RESOURCE"]
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
