manifestos_giropops_senhas/service-giropops-senhas.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas-service
  namespace: giropops-senhas
  labels:
    app: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    name: tcp-app
  type: ClusterIP
