manifestos_giropops_senhas/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: giropops-senhas
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
